--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "web:start": "nx serve web",
     "start:linux": "yarn dev:linux",
     "start:windows": "yarn dev:windows",
-    "dev:linux": "concurrently --kill-others-on-fail -n \"HASURA,PRISMA,WEB,WEB-PRELOADER,LAUNCH BROWSER\" -c \"red,green,blue,grey,grey\" \"delay 10 && wait-on tcp:4000 && delay 15 && curl --connect-timeout 60 http://localhost:4000/graphql 2>/dev/null && yarn hasura:start:linux\" npm:bridge:start npm:web:start \"wait-on tcp:4200 && delay 2 && curl http://localhost:4200 2>/dev/null\" \"wait-on tcp:4200 && wait-on tcp:8080 && open-cli 'http://localhost:4200'\"",
-    "dev:windows": "concurrently --kill-others-on-fail -n \"HASURA,PRISMA,WEB,WEB-PRELOADER,LAUNCH BROWSER\" -c \"red,green,blue,grey,grey\" \"delay 10 && wait-on tcp:4000 && delay 15 && curl --connect-timeout 60 http://localhost:4000/graphql 2>/dev/null && yarn hasura:start:windows\" npm:bridge:start npm:web:start \"wait-on tcp:4200 && delay 2 && curl http://localhost:4200 2>/dev/null\" \"wait-on tcp:4200 && wait-on tcp:8080 && open-cli 'http://localhost:4200'\"",
+    "dev:linux": "concurrently --kill-others-on-fail -n \"HASURA,PRISMA,WEB,WEB-PRELOADER,LAUNCH BROWSER\" -c \"red,green,blue,grey,grey\" \"delay 10 && wait-on tcp:4000 && delay 15 && curl --connect-timeout 60 http://localhost:4000/graphql 2>/dev/null && yarn hasura:start:linux\" npm:bridge:start npm:web:start \"wait-on tcp:4200 && delay 2 && nugget http://localhost:4200\" \"wait-on tcp:4200 && wait-on tcp:8080 && open-cli 'http://localhost:4200'\"",
+    "dev:windows": "concurrently --kill-others-on-fail -n \"HASURA,PRISMA,WEB,WEB-PRELOADER,LAUNCH BROWSER\" -c \"red,green,blue,grey,grey\" \"delay 10 && wait-on tcp:4000 && delay 15 && yarn hasura:start:windows\" npm:bridge:start npm:web:start \"wait-on tcp:4200 && delay 2 && nugget http://localhost:4200\" \"wait-on tcp:4200 && wait-on tcp:8080 && open-cli 'http://localhost:4200'\"",
     "bridge:start": "nx serve bridge-api --prod",
     "hasura:start:linux": "docker-compose -f hasura/docker-compose.linux.yml up -d postgres && delay 10 && docker-compose -f hasura/docker-compose.linux.yml up graphql-engine",
     "hasura:start:windows": "docker-compose -f hasura/docker-compose.windows.yml up -d postgres && delay 10 && docker-compose -f hasura/docker-compose.windows.yml up graphql-engine",
@@ -47,122 +47,122 @@
   },
   "private": true,
   "dependencies": {
-    "@anchan828/nest-sendgrid": "^0.4.10",
-    "@ant-design/icons": "^4.5.0",
-    "@apollo/client": "^3.3.11",
-    "@babel/plugin-transform-object-assign": "^7.12.13",
-    "@babel/plugin-transform-react-jsx-source": "^7.12.13",
-    "@babel/runtime": "^7.13.10",
-    "@fortawesome/fontawesome-svg-core": "^1.2.34",
-    "@fortawesome/free-solid-svg-icons": "^5.15.2",
-    "@fortawesome/react-fontawesome": "^0.1.14",
-    "@nestjs/common": "^7.6.13",
-    "@nestjs/config": "^0.6.3",
-    "@nestjs/core": "^7.6.13",
-    "@nestjs/platform-express": "^7.6.13",
-    "@paljs/cli": "^2.13.0",
-    "@paljs/nexus": "^2.13.0",
+    "@anchan828/nest-sendgrid": "0.4.10",
+    "@ant-design/icons": "4.5.0",
+    "@apollo/client": "3.3.11",
+    "@babel/plugin-transform-object-assign": "7.12.13",
+    "@babel/plugin-transform-react-jsx-source": "7.12.13",
+    "@babel/runtime": "7.13.10",
+    "@fortawesome/fontawesome-svg-core": "1.2.34",
+    "@fortawesome/free-solid-svg-icons": "5.15.2",
+    "@fortawesome/react-fontawesome": "0.1.14",
+    "@nestjs/common": "7.6.13",
+    "@nestjs/config": "0.6.3",
+    "@nestjs/core": "7.6.13",
+    "@nestjs/platform-express": "7.6.13",
+    "@paljs/cli": "2.13.0",
+    "@paljs/nexus": "2.13.0",
     "@prisma/client": "2.17.0",
-    "@storybook/addon-docs": "^6.1.21",
+    "@storybook/addon-docs": "6.1.21",
     "@zeit/next-less": "1.0.1",
     "antd": "https://github.com/binary64/ant-design/releases/download/master/antd-4.10.3.tgz",
-    "apollo": "^2.32.5",
-    "apollo-server": "^2.21.1",
-    "canvas-confetti": "^1.4.0",
-    "class-validator": "^0.13.1",
-    "classnames": "^2.2.6",
-    "cookie-session": "^1.4.0",
-    "cross-env": "^7.0.3",
-    "delay-cli": "^1.1.0",
+    "apollo": "2.32.5",
+    "apollo-server": "2.23.0",
+    "canvas-confetti": "1.4.0",
+    "class-validator": "0.13.1",
+    "classnames": "2.2.6",
+    "cookie-session": "1.4.0",
+    "cross-env": "7.0.3",
+    "delay-cli": "1.1.0",
     "document-register-element": "1.14.10",
-    "env-cmd": "^10.1.0",
-    "eslint-plugin-unicorn": "^28.0.2",
-    "express-jwt": "^6.0.0",
-    "file-loader": "^6.2.0",
-    "formik": "^2.2.6",
-    "formik-antd": "^2.0.1",
-    "google-libphonenumber": "^3.2.18",
-    "graphql-middleware": "^6.0.4",
-    "graphql-scalars": "^1.9.0",
-    "highcharts": "^9.0.1",
-    "highcharts-react-official": "^3.0.0",
-    "html-to-image": "^1.3.21",
-    "i18n-iso-countries": "^6.5.0",
-    "i18next": "^19.9.1",
-    "i18next-browser-languagedetector": "^6.0.1",
-    "i18next-xhr-backend": "^3.2.2",
+    "env-cmd": "10.1.0",
+    "eslint-plugin-unicorn": "28.0.2",
+    "express-jwt": "6.0.0",
+    "file-loader": "6.2.0",
+    "formik": "2.2.6",
+    "formik-antd": "2.0.1",
+    "google-libphonenumber": "3.2.18",
+    "graphql-middleware": "6.0.4",
+    "graphql-scalars": "1.9.0",
+    "highcharts": "9.0.1",
+    "highcharts-react-official": "3.0.0",
+    "html-to-image": "1.3.21",
+    "i18n-iso-countries": "6.5.0",
+    "i18next": "19.9.1",
+    "i18next-browser-languagedetector": "6.0.1",
+    "i18next-xhr-backend": "3.2.2",
     "immer": "8.0.1",
-    "inflected": "^2.1.0",
-    "jsonwebtoken": "^8.5.1",
-    "less": "^3.13.0",
-    "less-loader": "^7",
-    "less-vars-to-js": "^1.3.0",
+    "inflected": "2.1.0",
+    "jsonwebtoken": "8.5.1",
+    "less": "3.13.1",
+    "less-loader": "7.3.0",
+    "less-vars-to-js": "1.3.0",
     "next": "10.0.7",
-    "next-images": "^1.7.0",
-    "next-plugin-antd-less": "^0.3.0",
+    "next-images": "1.7.0",
+    "next-plugin-antd-less": "0.3.0",
     "nexus": "1.0.0",
     "nexus-plugin-prisma": "0.31.0",
-    "node-fetch": "^2.6.1",
-    "open-cli": "^6.0.1",
-    "preferred-locale": "^1.0.10",
-    "r7insight_node": "^2.1.0",
-    "rc-queue-anim": "^1.8.5",
+    "node-fetch": "2.6.1",
+    "open-cli": "6.0.1",
+    "preferred-locale": "1.0.10",
+    "r7insight_node": "2.1.0",
+    "rc-queue-anim": "1.8.5",
     "react": "17.0.1",
-    "react-beautiful-dnd": "^13.0.0",
-    "react-color": "^2.19.3",
-    "react-copy-to-clipboard": "^5.0.3",
-    "react-custom-scrollbars": "^4.2.1",
-    "react-device-detect": "^1.15.0",
+    "react-beautiful-dnd": "13.1.0",
+    "react-color": "2.19.3",
+    "react-copy-to-clipboard": "5.0.3",
+    "react-custom-scrollbars": "4.2.1",
+    "react-device-detect": "1.17.0",
     "react-dom": "17.0.1",
     "react-google-places-autocomplete": "3.2.2",
-    "react-grid-layout": "^1.2.2",
-    "react-highlight-words": "^0.17.0",
-    "react-i18next": "^11.8.9",
-    "react-image-crop": "^8.6.6",
-    "react-jsx-highcharts": "^4.2.0",
-    "react-lottie": "^1.2.3",
+    "react-grid-layout": "1.2.4",
+    "react-highlight-words": "0.17.0",
+    "react-i18next": "11.8.10",
+    "react-image-crop": "8.6.6",
+    "react-jsx-highcharts": "4.2.0",
+    "react-lottie": "1.2.3",
     "react-native": "0.63.4",
-    "react-number-format": "^4.4.4",
-    "react-pdf": "^5.2.0",
-    "react-phone-input-2": "^2.13.9",
-    "react-quill": "^1.3.5",
-    "react-sortable-hoc": "^1.11.0",
-    "react-string-replace": "^0.4.4",
-    "react-use": "^17.1.1",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "~6.6.6",
-    "sql-template-tag": "^4.0.0",
-    "storybook-addon-i18next": "^1.3.0",
-    "string-to-color": "^2.2.2",
-    "subscriptions-transport-ws": "^0.9.18",
-    "ts-node-dev": "^1.1.6",
-    "tslib": "^2.1.0",
-    "uuid": "^8.3.2",
-    "wait-on": "^5.3.0",
-    "yup": "^0.32.9"
+    "react-number-format": "4.4.4",
+    "react-pdf": "5.2.0",
+    "react-phone-input-2": "2.13.9",
+    "react-quill": "1.3.5",
+    "react-sortable-hoc": "1.11.0",
+    "react-string-replace": "0.4.4",
+    "react-use": "17.1.1",
+    "reflect-metadata": "0.1.13",
+    "rxjs": "6.6.7",
+    "sql-template-tag": "4.0.0",
+    "storybook-addon-i18next": "1.3.0",
+    "string-to-color": "2.2.2",
+    "subscriptions-transport-ws": "0.9.18",
+    "ts-node-dev": "1.1.6",
+    "tslib": "2.1.0",
+    "uuid": "8.3.2",
+    "wait-on": "5.3.0",
+    "yup": "0.32.9"
   },
   "devDependencies": {
     "@babel/core": "7.13.10",
-    "@babel/plugin-transform-runtime": "^7.13.10",
+    "@babel/plugin-transform-runtime": "7.13.10",
     "@babel/preset-env": "7.13.10",
     "@babel/preset-react": "7.12.13",
     "@babel/preset-typescript": "7.13.0",
-    "@graphql-codegen/add": "^2.0.2",
-    "@graphql-codegen/cli": "^1.21.2",
+    "@graphql-codegen/add": "2.0.2",
+    "@graphql-codegen/cli": "1.21.2",
     "@graphql-codegen/fragment-matcher": "2.0.1",
     "@graphql-codegen/introspection": "1.18.1",
-    "@graphql-codegen/plugin-helpers": "^1.18.3",
-    "@graphql-codegen/schema-ast": "^1.18.1",
-    "@graphql-codegen/typescript": "^1.21.1",
+    "@graphql-codegen/plugin-helpers": "1.18.3",
+    "@graphql-codegen/schema-ast": "1.18.1",
+    "@graphql-codegen/typescript": "1.21.1",
     "@graphql-codegen/typescript-document-nodes": "1.17.10",
     "@graphql-codegen/typescript-graphql-files-modules": "1.18.1",
-    "@graphql-codegen/typescript-operations": "^1.17.15",
-    "@graphql-codegen/typescript-react-apollo": "^2.2.2",
+    "@graphql-codegen/typescript-operations": "1.17.15",
+    "@graphql-codegen/typescript-react-apollo": "2.2.3",
     "@graphql-codegen/typescript-resolvers": "1.19.0",
-    "@ls-lint/ls-lint": "^1.9.2",
-    "@nestjs/cli": "^7.5.6",
-    "@nestjs/schematics": "^7.2.8",
-    "@nestjs/testing": "^7.6.13",
+    "@ls-lint/ls-lint": "1.9.2",
+    "@nestjs/cli": "7.5.6",
+    "@nestjs/schematics": "7.3.0",
+    "@nestjs/testing": "7.6.15",
     "@nrwl/cli": "11.4.0",
     "@nrwl/cypress": "11.4.0",
     "@nrwl/eslint-plugin-nx": "11.4.0",
@@ -172,73 +172,74 @@
     "@nrwl/next": "11.4.0",
     "@nrwl/node": "11.4.0",
     "@nrwl/react": "11.4.0",
-    "@nrwl/react-native": "^11.4.1",
-    "@nrwl/storybook": "^11.4.0",
+    "@nrwl/react-native": "11.4.1",
+    "@nrwl/storybook": "11.5.2",
     "@nrwl/tao": "11.4.0",
     "@nrwl/web": "11.4.0",
     "@nrwl/workspace": "11.4.0",
     "@react-native-community/cli-platform-android": "4.13.0",
     "@react-native-community/cli-platform-ios": "4.13.0",
-    "@storybook/addon-a11y": "^6.1.21",
-    "@storybook/addon-essentials": "^6.1.21",
-    "@storybook/addon-storysource": "^6.1.21",
-    "@storybook/react": "^6.1.21",
-    "@testing-library/jest-native": "^4.0.1",
+    "@storybook/addon-a11y": "6.1.21",
+    "@storybook/addon-essentials": "6.1.21",
+    "@storybook/addon-storysource": "6.1.21",
+    "@storybook/react": "6.1.21",
+    "@testing-library/jest-native": "4.0.1",
     "@testing-library/react": "11.2.5",
     "@testing-library/react-native": "7.2.0",
-    "@types/classnames": "^2.2.11",
-    "@types/cookie-session": "^2.0.42",
-    "@types/jest": "^26.0.20",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/node": "~14.14.32",
-    "@types/pluralize": "^0.0.29",
+    "@types/classnames": "2.2.11",
+    "@types/cookie-session": "2.0.42",
+    "@types/jest": "26.0.21",
+    "@types/jsonwebtoken": "8.5.1",
+    "@types/node": "14.14.41",
+    "@types/pluralize": "0.0.29",
     "@types/react": "17.0.3",
-    "@types/react-custom-scrollbars": "^4.0.7",
+    "@types/react-custom-scrollbars": "4.0.7",
     "@types/react-dom": "17.0.2",
-    "@types/react-grid-layout": "^1.1.1",
+    "@types/react-grid-layout": "1.1.1",
     "@types/react-native": "0.63.51",
     "@types/webpack": "4.41.26",
-    "@typescript-eslint/eslint-plugin": "^4.17.0",
-    "@typescript-eslint/parser": "^4.17.0",
-    "@vercel/node": "^1.9.1",
-    "apollo-server-testing": "^2.21.2",
+    "@typescript-eslint/eslint-plugin": "4.22.0",
+    "@typescript-eslint/parser": "4.22.0",
+    "@vercel/node": "1.9.1",
+    "apollo-server-testing": "2.23.0",
     "babel-jest": "26.6.3",
     "babel-loader": "8.2.2",
-    "bitbucket": "^2.4.2",
-    "concurrently": "^5.3.0",
-    "cypress": "^6.5.0",
-    "dotenv": "^8.2.0",
-    "eslint": "^7.21.0",
-    "eslint-config-canonical": "^25.9.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-graphql": "^4.0.0",
+    "bitbucket": "2.4.2",
+    "concurrently": "5.3.0",
+    "cypress": "6.8.0",
+    "dotenv": "8.2.0",
+    "eslint": "7.22.0",
+    "eslint-config-canonical": "25.9.0",
+    "eslint-config-prettier": "7.2.0",
+    "eslint-plugin-cypress": "2.11.2",
+    "eslint-plugin-graphql": "4.0.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-sonarjs": "^0.6.0",
-    "eslint-plugin-you-dont-need-lodash-underscore": "^6.11.0",
-    "graphql-shield": "^7.5.0",
-    "husky": "^5.0.9",
-    "jest": "^26.2.2",
+    "eslint-plugin-prettier": "3.3.1",
+    "eslint-plugin-react": "7.23.2",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "eslint-plugin-sonarjs": "0.6.0",
+    "eslint-plugin-you-dont-need-lodash-underscore": "6.11.0",
+    "graphql-shield": "7.5.0",
+    "husky": "5.2.0",
+    "jest": "26.6.3",
     "jest-react-native": "18.0.0",
     "metro-react-native-babel-preset": "0.65.2",
-    "next-page-tester": "^0.24.1",
-    "prettier": "^2.2.1",
+    "next-page-tester": "0.24.1",
+    "nugget": "^2.0.1",
+    "prettier": "2.2.1",
     "prisma": "2.17.0",
-    "prisma-json-schema-generator": "^1.2.1",
-    "react-cookie": "^4.0.3",
-    "react-docgen-typescript": "^1.20.5",
+    "prisma-json-schema-generator": "1.2.1",
+    "react-cookie": "4.0.3",
+    "react-docgen-typescript": "1.22.0",
     "react-test-renderer": "17.0.1",
-    "ts-jest": "^26.5.3",
-    "ts-node": "^9.1.1",
+    "ts-jest": "26.5.5",
+    "ts-node": "9.1.1",
     "tslint": "6.1.3",
-    "typescript": "^4.2.3",
-    "url-loader": "^4.1.1",
-    "vercel": "^21.3.3",
-    "yaml-loader": "^0.6.0"
+    "typescript": "4.2.3",
+    "url-loader": "4.1.1",
+    "vercel": "21.3.3",
+    "yaml-loader": "0.6.0"
   },
   "resolutions": {
     "**/immer": "8.0.1",
