[skip ci] add vscode ext

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
   "recommendations": [
     "editorconfig.editorconfig",
     "graphql.vscode-graphql",
-    "dbaeumer.vscode-eslint"
-  ]
+    "dbaeumer.vscode-eslint",
+    "prisma.prisma"
+]
 }
