CI: rebuild all

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -159,6 +159,8 @@ pipelines:
           script:
             - NODE_OPTIONS=--max_old_space_size=4096 yarn install --frozen-lockfile --prefer-offline
             - NODE_OPTIONS=--max_old_space_size=4096 yarn affected --base=HEAD~1 --target=build --prod
+            - NODE_OPTIONS=--max_old_space_size=4096 yarn affected --base=HEAD~1 --target=export --prod
+            - NODE_OPTIONS=--max_old_space_size=4096 yarn affected --base=HEAD~1 --target=build-storybook --prod
           artifacts:
             - node_modules/**
             - dist/**
@@ -180,7 +182,8 @@ pipelines:
           name: deploy previews
           deployment: production-serverless
           script:
-            - ls -al dist
+            - ls -al dist || true
+            - ls -al dist/apps || true
             - apt-get update -y && apt-get install -y curl jq time
 
             # get the commit message for this merge
