[skip ci] docs update

--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "web:start": "nx serve web",
     "start:linux": "yarn dev:linux",
     "start:windows": "yarn dev:windows",
-    "dev:linux": "concurrently --kill-others-on-fail -n \"HASURA,PRISMA,WEB,WEB-PRELOADER,LAUNCH BROWSER\" -c \"red,green,blue,grey,grey\" \"delay 10 && wait-on tcp:4000 && delay 15 && curl --connect-timeout 60 http://localhost:4000/graphql 2>/dev/null && yarn hasura:start:linux\" npm:bridge:start npm:web:start \"wait-on tcp:4200 && delay 2 && nugget http://localhost:4200\" \"wait-on tcp:4200 && wait-on tcp:8080 && open-cli 'http://localhost:4200'\"",
-    "dev:windows": "concurrently --kill-others-on-fail -n \"HASURA,PRISMA,WEB,WEB-PRELOADER,LAUNCH BROWSER\" -c \"red,green,blue,grey,grey\" \"delay 10 && wait-on tcp:4000 && delay 15 && yarn hasura:start:windows\" npm:bridge:start npm:web:start \"wait-on tcp:4200 && delay 2 && nugget http://localhost:4200\" \"wait-on tcp:4200 && wait-on tcp:8080 && open-cli 'http://localhost:4200'\"",
+    "dev:linux": "concurrently --kill-others-on-fail -n \"HASURA,PRISMA,WEB,WEB-PRELOADER,LAUNCH BROWSER\" -c \"red,green,blue,grey,grey\" \"delay 10 && wait-on tcp:4000 && delay 15 && curl --connect-timeout 60 'http://localhost:4000/graphql' 2>/dev/null && yarn hasura:start:linux\" npm:bridge:start npm:web:start \"wait-on tcp:4200 && delay 2 && nugget 'http://localhost:4200'\" \"wait-on tcp:4200 && wait-on tcp:8080 && open-cli 'http://localhost:4200'\"",
+    "dev:windows": "concurrently --kill-others-on-fail -n \"HASURA,PRISMA,WEB,WEB-PRELOADER,LAUNCH BROWSER\" -c \"red,green,blue,grey,grey\" \"delay 10 && wait-on tcp:4000 && delay 15 && yarn hasura:start:windows\" npm:bridge:start npm:web:start \"wait-on tcp:4200 && delay 2 && nugget 'http://localhost:4200'\" \"wait-on tcp:4200 && wait-on tcp:8080 && open-cli 'http://localhost:4200'\"",
     "bridge:start": "nx serve bridge-api --prod",
-    "hasura:start:linux": "docker-compose -f hasura/docker-compose.linux.yml up -d postgres && delay 10 && docker-compose -f hasura/docker-compose.linux.yml up graphql-engine",
-    "hasura:start:windows": "docker-compose -f hasura/docker-compose.windows.yml up -d postgres && delay 10 && docker-compose -f hasura/docker-compose.windows.yml up graphql-engine",
+    "hasura:start:linux": "docker-compose -f hasura/docker-compose.linux.yml up -d postgres && delay 10 && docker-compose -f hasura/docker-compose.linux.yml up --force-recreate graphql-engine",
+    "hasura:start:windows": "docker-compose -f hasura/docker-compose.windows.yml up -d postgres && delay 10 && docker-compose -f hasura/docker-compose.windows.yml up --force-recreate graphql-engine",
     "hasura:clean": "docker-compose -f hasura/docker-compose.linux.yml down -v",
     "hasura:export": "env-cmd -f ./hasura/.env npx -p hasura-cli@2.0.0-alpha.7 hasura --project hasura metadata export && apollo client:download-schema remote-schema.graphql && apollo client:download-schema graphql.schema.json",
     "production:start": "nx affected --uncommitted=true --target=export && npx serve dist/apps/web/exported",
