* Deploying to rancher2 * Revved backend app * Fixed bridge-api tests

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "hasura:export": "env-cmd -f ./hasura/.env npx -p hasura-cli@2.0.0-alpha.7 hasura --project hasura metadata export && apollo client:download-schema remote-schema.graphql && apollo client:download-schema graphql.schema.json",
     "production:start": "nx affected --uncommitted=true --target=export && npx serve dist/apps/web/exported",
     "build": "pwd && ls -al && rm -rf public/ && nx build backend --no-cache && cp -rf dist/apps/backend/ public/ && cp apps/backend/vercel.json public/ && cp package.json public/",
-    "pipeline-checks": "concurrently --max-processes=1 --kill-others \"yarn nx affected --all --target=lint\" \"yarn nx affected --all --target=test\" \"yarn nx affected --all --target=build\" \"yarn nx affected --all --target=e2e\" ",
-    "pipeline-checks:parallel": "concurrently --max-processes=1 --kill-others \"yarn nx affected --parallel --all --target=lint\" \"yarn nx affected --parallel --all --target=test\" \"yarn nx affected --parallel --all --target=build\" \"yarn nx affected --all --target=e2e\" ",
+    "pipeline-checks": "concurrently --max-processes=1 --kill-others-on-fail \"yarn nx affected --all --target=lint\" \"yarn nx affected --all --target=test\" \"yarn nx affected --all --target=build\" \"yarn nx affected --all --target=e2e\" ",
+    "pipeline-checks:parallel": "concurrently --max-processes=1 --kill-others-on-fail \"yarn nx affected --parallel --all --target=lint\" \"yarn nx affected --parallel --all --target=test\" \"yarn nx affected --parallel --all --target=build\" \"yarn nx affected --all --target=e2e\" ",
     "ls-lint": "ls-lint",
     "test": "nx test",
     "lint": "nx workspace-lint && nx lint",
@@ -50,49 +50,45 @@
   "dependencies": {
     "@anchan828/nest-sendgrid": "0.4.10",
     "@ant-design/icons": "4.5.0",
-    "@apollo/client": "3.3.11",
+    "@apollo/client": "3.3.15",
     "@babel/plugin-transform-object-assign": "7.12.13",
     "@babel/plugin-transform-react-jsx-source": "7.12.13",
-    "@babel/runtime": "7.13.10",
-    "@fortawesome/fontawesome-svg-core": "1.2.34",
-    "@fortawesome/free-solid-svg-icons": "5.15.2",
+    "@babel/runtime": "7.13.17",
+    "@fortawesome/fontawesome-svg-core": "1.2.35",
+    "@fortawesome/free-solid-svg-icons": "5.15.3",
     "@fortawesome/react-fontawesome": "0.1.14",
-    "@nestjs/common": "7.6.13",
+    "@nestjs/common": "7.6.15",
     "@nestjs/config": "0.6.3",
-    "@nestjs/core": "7.6.13",
-    "@nestjs/platform-express": "7.6.13",
-    "@paljs/cli": "2.13.0",
-    "@paljs/nexus": "2.13.0",
-    "@prisma/client": "2.17.0",
-    "@storybook/addon-docs": "6.1.21",
-    "@zeit/next-less": "1.0.1",
+    "@nestjs/core": "7.6.15",
+    "@nestjs/platform-express": "7.6.15",
+    "@paljs/cli": "3.0.8",
+    "@paljs/nexus": "3.0.1",
+    "@prisma/client": "2.21.2",
     "antd": "https://github.com/binary64/ant-design/releases/download/master/antd-4.10.3.tgz",
-    "apollo": "2.32.5",
+    "apollo": "2.32.8",
     "apollo-server": "2.23.0",
     "canvas-confetti": "1.4.0",
     "class-validator": "0.13.1",
-    "classnames": "2.2.6",
+    "classnames": "2.3.1",
     "cookie-session": "1.4.0",
     "cross-env": "7.0.3",
     "delay-cli": "1.1.0",
     "document-register-element": "1.14.10",
     "env-cmd": "10.1.0",
-    "eslint-plugin-unicorn": "28.0.2",
-    "express-jwt": "6.0.0",
+    "eslint-plugin-unicorn": "30.0.0",
     "file-loader": "6.2.0",
     "formik": "2.2.6",
     "formik-antd": "2.0.1",
-    "google-libphonenumber": "3.2.18",
-    "graphql-middleware": "6.0.4",
+    "google-libphonenumber": "3.2.19",
+    "graphql-middleware": "6.0.7",
     "graphql-scalars": "1.9.0",
     "highcharts": "9.0.1",
     "highcharts-react-official": "3.0.0",
-    "html-to-image": "1.3.21",
+    "html-to-image": "1.6.1",
     "i18n-iso-countries": "6.5.0",
     "i18next": "19.9.1",
     "i18next-browser-languagedetector": "6.0.1",
     "i18next-xhr-backend": "3.2.2",
-    "immer": "8.0.1",
     "inflected": "2.1.0",
     "jsonwebtoken": "8.5.1",
     "less": "3.13.1",
@@ -106,30 +102,30 @@
     "node-fetch": "2.6.1",
     "open-cli": "6.0.1",
     "preferred-locale": "1.0.10",
-    "r7insight_node": "2.1.0",
+    "r7insight_node": "2.1.1",
     "rc-queue-anim": "1.8.5",
-    "react": "17.0.1",
+    "react": "17.0.2",
     "react-beautiful-dnd": "13.1.0",
     "react-color": "2.19.3",
     "react-copy-to-clipboard": "5.0.3",
     "react-custom-scrollbars": "4.2.1",
     "react-device-detect": "1.17.0",
-    "react-dom": "17.0.1",
-    "react-google-places-autocomplete": "3.2.2",
+    "react-dom": "17.0.2",
+    "react-google-places-autocomplete": "3.3.0",
     "react-grid-layout": "1.2.4",
     "react-highlight-words": "0.17.0",
-    "react-i18next": "11.8.10",
+    "react-i18next": "11.8.13",
     "react-image-crop": "8.6.6",
-    "react-jsx-highcharts": "4.2.0",
+    "react-jsx-highcharts": "4.2.1",
     "react-lottie": "1.2.3",
     "react-native": "0.63.4",
-    "react-number-format": "4.4.4",
+    "react-number-format": "4.5.5",
     "react-pdf": "5.2.0",
-    "react-phone-input-2": "2.13.9",
+    "react-phone-input-2": "2.14.0",
     "react-quill": "1.3.5",
     "react-sortable-hoc": "1.11.0",
     "react-string-replace": "0.4.4",
-    "react-use": "17.1.1",
+    "react-use": "17.2.3",
     "reflect-metadata": "0.1.13",
     "rxjs": "6.6.7",
     "sql-template-tag": "4.0.0",
@@ -137,7 +133,7 @@
     "string-to-color": "2.2.2",
     "subscriptions-transport-ws": "0.9.18",
     "ts-node-dev": "1.1.6",
-    "tslib": "2.1.0",
+    "tslib": "2.2.0",
     "uuid": "8.3.2",
     "wait-on": "5.3.0",
     "yup": "0.32.9"
@@ -164,20 +160,20 @@
     "@nestjs/cli": "7.5.6",
     "@nestjs/schematics": "7.3.0",
     "@nestjs/testing": "7.6.15",
-    "@nrwl/cli": "11.4.0",
-    "@nrwl/cypress": "11.4.0",
-    "@nrwl/eslint-plugin-nx": "11.4.0",
-    "@nrwl/jest": "11.4.0",
-    "@nrwl/linter": "11.4.0",
-    "@nrwl/nest": "11.4.0",
-    "@nrwl/next": "11.4.0",
-    "@nrwl/node": "11.4.0",
-    "@nrwl/react": "11.4.0",
+    "@nrwl/cli": "12.0.8",
+    "@nrwl/cypress": "12.0.8",
+    "@nrwl/eslint-plugin-nx": "12.0.8",
+    "@nrwl/jest": "12.0.8",
+    "@nrwl/linter": "12.0.8",
+    "@nrwl/nest": "12.0.8",
+    "@nrwl/next": "12.0.8",
+    "@nrwl/node": "12.0.8",
+    "@nrwl/react": "12.0.8",
     "@nrwl/react-native": "11.4.1",
-    "@nrwl/storybook": "11.5.2",
-    "@nrwl/tao": "11.4.0",
-    "@nrwl/web": "11.4.0",
-    "@nrwl/workspace": "11.4.0",
+    "@nrwl/storybook": "12.0.8",
+    "@nrwl/tao": "12.0.8",
+    "@nrwl/web": "12.0.8",
+    "@nrwl/workspace": "12.0.8",
     "@react-native-community/cli-platform-android": "4.13.0",
     "@react-native-community/cli-platform-ios": "4.13.0",
     "@storybook/addon-a11y": "6.1.21",
@@ -189,7 +185,7 @@
     "@testing-library/react-native": "7.2.0",
     "@types/classnames": "2.2.11",
     "@types/cookie-session": "2.0.42",
-    "@types/jest": "26.0.21",
+    "@types/jest": "^26.0.22",
     "@types/jsonwebtoken": "8.5.1",
     "@types/node": "14.14.41",
     "@types/pluralize": "0.0.29",
@@ -229,7 +225,7 @@
     "next-page-tester": "0.24.1",
     "nugget": "^2.0.1",
     "prettier": "2.2.1",
-    "prisma": "2.17.0",
+    "prisma": "2.21.2",
     "prisma-json-schema-generator": "1.2.1",
     "react-cookie": "4.0.3",
     "react-docgen-typescript": "1.22.0",
