--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,9 @@
     "unicorn/prefer-array-some": 0,
     "unicorn/prefer-string-slice": 0,
     "unicorn/prevent-abbreviations": 0,
-    "unicorn/filename-case": 0
+    "unicorn/filename-case": 0,
+    "unicorn/prefer-switch": 0,
+    "unicorn/prefer-ternary": 0
   },
   "overrides": [
     {
