--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "nx": "cross-env NODE_OPTIONS='--max-old-space-size=4096' nx",
     "vercel": "vercel",
-    "apollo": "apollo",
+    "apollo": "npx apollo",
     "nest": "cd apps/backend && nest",
     "clean": "rimraf **/node_modules",
     "web:start": "nx serve web",
@@ -27,20 +27,22 @@
     "hasura:start:windows": "docker-compose -f hasura/docker-compose.windows.yml up -d postgres && delay 10 && docker-compose -f hasura/docker-compose.windows.yml up --force-recreate graphql-engine",
     "hasura:stop": "docker-compose -f hasura/docker-compose.linux.yml down -t 5",
     "hasura:clean": "docker-compose -f hasura/docker-compose.linux.yml down -v",
-    "hasura:export": "env-cmd -f ./hasura/.env npx -p hasura-cli@2.0.0-alpha.7 hasura --project hasura metadata export && npx apollo client:download-schema remote-schema.graphql && npx apollo client:download-schema graphql.schema.json",
+    "hasura:export": "env-cmd -f ./hasura/.env npx -p hasura-cli@2.0.0-alpha.7 hasura --project hasura metadata export && apollo client:download-schema remote-schema.graphql && apollo client:download-schema graphql.schema.json",
     "production:start": "nx affected --uncommitted=true --target=export && npx serve dist/apps/web/exported",
     "build": "pwd && ls -al && rm -rf public/ && nx build backend --no-cache && cp -rf dist/apps/backend/ public/ && cp apps/backend/vercel.json public/ && cp package.json public/",
     "pipeline-checks": "yarn --pure-lockfile --prefer-offline && yarn lint:tsc && yarn nx affected --all --target=lint && yarn nx affected --all --target=test && yarn nx affected --all --target=build",
     "pipeline-checks:parallel": "yarn --pure-lockfile --prefer-offline && concurrently --max-processes=5 --kill-others-on-fail -n TSC,LS-LINT,LINT,TEST,BUILD,E2E \"yarn lint:tsc\" \"yarn ls-lint || true\" \"yarn nx affected --all --target=lint\" \"yarn nx affected --all --target=test\" \"yarn nx affected --all --target=build\"",
     "pipeline-checks:insane": "yarn --pure-lockfile --prefer-offline && concurrently --max-processes=6 -n TSC,LS-LINT,LINT,TEST,BUILD,E2E \"yarn lint:tsc\" \"yarn ls-lint || true\" \"yarn nx affected --all --target=lint\" \"yarn nx affected --all --target=test\" \"yarn nx affected --all --target=build\"",
     "lint:tsc": "concurrently --max-processes=5 \"tsc --noEmit -p apps/backend/\" \"tsc --noEmit -p apps/connect/\" \"tsc --noEmit -p apps/connect-e2e/\" \"tsc --noEmit -p apps/mgmt/\" \"tsc --noEmit -p apps/mgmt-e2e/\" \"tsc --noEmit -p apps/ui-e2e/\" \"tsc --noEmit -p apps/web/\" \"tsc --noEmit -p apps/web-e2e/\" \"tsc --noEmit -p libs/ui/tsconfig.lib.json\" \"tsc --noEmit -p libs/yup/tsconfig.lib.json\"",
-    "ls-lint": "ls-lint",
+    "lint:ls": "ls-lint",
+    "lint:workspace": "nx workspace-lint",
     "test": "nx test",
     "lint": "nx workspace-lint && nx lint",
     "e2e": "nx e2e",
     "affected:apps": "nx affected:apps",
     "affected:libs": "nx affected:libs",
     "affected:build": "nx affected:build",
+    "affected:export": "nx affected --target=export",
     "affected:e2e": "nx affected:e2e",
     "affected:test": "nx affected:test",
     "affected:lint": "nx affected:lint",
